# sabermine

./: README.md
sabermine-backend/: .env  .env.example  README.md  pyproject.toml
sabermine-backend/lambda_function/sabermine_backend/: __init__.py  api.py
sabermine-backend/lambda_function/tests/: conftest.py  test_api.py  test_logic.py
sabermine-backend/sabermine_backend/: index.py  requirements.txt
sabermine-backend/sabermine_backend/api/: __init__.py  logic.py
sabermine-backend/sabermine_backend/tests/: conftest.py  test_api.py  test_logic.py
sabermine-frontend/: .env.local  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sabermine-frontend/.next/: trace
sabermine-frontend/.next/cache/: .rscinfo
sabermine-frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
sabermine-frontend/.next/server/app/: page.js  page_client-reference-manifest.js
sabermine-frontend/.next/server/chunks/: [root of the server]__ddb12edd._.js.map  node_modules_next_049cd8f8._.js.map
sabermine-frontend/.next/static/chunks/: [root of the server]__98144f0b._.css  [root of the server]__98144f0b._.css.map  app_globals_b52d8e88.css  app_globals_b52d8e88.css.map  app_layout_tsx_e936f940._.js  app_page_tsx_f22e3ef3._.js  (+8 more)
sabermine-frontend/app/: page.tsx  types.ts
sabermine-frontend/app/components/: button.tsx  linkCreator.tsx  linkTable.tsx
sabermine-infrastructure/: .env.example  .gitignore  README.md  app.py  pyproject.toml  stack.py
sabermine-infrastructure/tests/unit/: test_sabermine_backend_stack.py
(+11 files in other folders)
