[project]
name = "sabermine-backend"
version = "0.1.0"
description = "Sabermine backend FastAPI service"
authors = [
    {name = "Jonathan S Berry",email = "jonathan.s.berry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "mangum (>=0.19.0,<0.20.0)",
    "boto3 (>=1.37.3,<2.0.0)",
    "moto[all] (>=5.1.0,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi (>=0.115.9,<0.116.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipdb = "^0.13.13"
fastapi = {extras = ["standard"], version = "^0.115.9"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "sabermine_backend/requirements.txt"
without_hashes = true
without = ["dev"]

